<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:overScrollMode="never"
    tools:context=".presentation.character.CharacterDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/ivBack"
            style="@style/RM.Button.Back"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/cd_back"
            android:elevation="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvBack"
            style="@style/RM.Card"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="30dp"
            app:layout_constraintBottom_toBottomOf="@id/ivBack"
            app:layout_constraintEnd_toEndOf="@id/ivBack"
            app:layout_constraintStart_toStartOf="@id/ivBack"
            app:layout_constraintTop_toTopOf="@id/ivBack" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvAvatar"
            style="@style/RM.Card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:cardElevation="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivCharacter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cd_character_image"
                android:elevation="0dp"
                android:scaleType="centerCrop"
                android:transitionName="characterAvatar"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@color/dune" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvInfo"
            style="@style/RM.Card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:transitionName="characterContainer"
            app:layout_constraintBottom_toBottomOf="@+id/cvAvatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvAvatar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvName"
                    style="@style/RM.Text.Value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:elevation="32dp"
                    android:gravity="center"
                    android:textSize="32sp"
                    android:transitionName="characterName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Rick Sanchez" />

                <TextView
                    android:id="@+id/tvType"
                    style="@style/RM.Text.Value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:elevation="32dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvName"
                    tools:text="(Mad Scientist)"
                    tools:visibility="visible" />

                <View
                    android:id="@+id/vDivider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:alpha="0.1"
                    android:background="?text_value_color"
                    app:layout_constraintTop_toBottomOf="@+id/tvType" />

                <ImageView
                    android:id="@+id/ivSpecies"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/cd_species"
                    android:src="@drawable/icon_alien"
                    app:layout_constraintDimensionRatio="h,1:1"
                    app:layout_constraintEnd_toStartOf="@+id/cvStatus"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vDivider" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvStatus"
                    style="@style/RM.Card"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardBackgroundColor="@color/green"
                    app:layout_constraintBottom_toBottomOf="@+id/ivSpecies"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toStartOf="@+id/ivGender"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ivSpecies"
                    app:layout_constraintTop_toTopOf="@+id/ivSpecies" />

                <ImageView
                    android:id="@+id/ivGender"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/cd_gender"
                    android:src="@drawable/icon_gender_male"
                    app:layout_constraintBottom_toBottomOf="@+id/ivSpecies"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/cvStatus"
                    app:layout_constraintTop_toTopOf="@+id/ivSpecies" />

                <TextView
                    android:id="@+id/tvSpecies"
                    style="@style/RM.Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:alpha="0.5"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/ivSpecies"
                    app:layout_constraintStart_toStartOf="@+id/ivSpecies"
                    app:layout_constraintTop_toBottomOf="@+id/ivSpecies"
                    tools:text="Human" />

                <TextView
                    android:id="@+id/tvStatus"
                    style="@style/RM.Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/cvStatus"
                    app:layout_constraintStart_toStartOf="@+id/cvStatus"
                    app:layout_constraintTop_toTopOf="@+id/tvSpecies"
                    tools:text="Active" />

                <TextView
                    android:id="@+id/tvGender"
                    style="@style/RM.Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/ivGender"
                    app:layout_constraintStart_toStartOf="@+id/ivGender"
                    app:layout_constraintTop_toTopOf="@+id/tvSpecies"
                    tools:text="Male" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCurrentLocation"
            style="@style/RM.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/cvInfo"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvCurrentLocationTitle"
                    style="@style/RM.Text.Value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:gravity="center"
                    android:text="@string/location"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvCurrentLocationValue"
                    style="@style/RM.Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCurrentLocationTitle"
                    tools:text="Earth (Replacement Dimension)" />

                <TextView
                    android:id="@+id/tvCurrentLocationDimension"
                    style="@style/RM.Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:alpha="0.5"
                    android:gravity="center"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCurrentLocationValue"
                    tools:text="Dimension C-137" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvOriginLocation"
            style="@style/RM.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/cvCurrentLocation"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvOriginLocationTitle"
                    style="@style/RM.Text.Value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:gravity="center"
                    android:text="@string/origin"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvOriginLocationValue"
                    style="@style/RM.Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvOriginLocationTitle"
                    tools:text="Earth (Replacement Dimension)" />

                <TextView
                    android:id="@+id/tvOriginLocationDimension"
                    style="@style/RM.Text.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:alpha="0.5"
                    android:gravity="center"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvOriginLocationValue"
                    tools:text="Dimension C-137" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvEpisodes"
            style="@style/RM.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/cvOriginLocation"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvEpisodes"
                style="@style/RM.Text.Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/episodes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/cvEpisodes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>